--- a/hello-vue-router/index.html
+++ b/hello-vue-router/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>hello-vue-router</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>hello-vue-router</title>
+</head>
+
+<body>
+  <div id="app">
+
+  </div>
+  <div id="navi">
+
+  </div>
+</body>
+
 </html>
