--- a/hello-vue-router/index.html
+++ b/hello-vue-router/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>hello-vue-router</title>
+  <script type="text/javascript" src="http://api.map.baidu.com/getscript?v=3.0&ak=UXxU9eWgnKcT04NwS0gow1GU5wGKzfc7"></script>
 </head>
 
 <body>
